Bug 368909 - Regression: Windows with demands attention flag are falsely shown on all workspaces
Summary: Regression: Windows with demands attention flag are falsely shown on all work...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.7.95
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-16 18:09 UTC by Christian (Fuchs)
Modified: 2016-09-19 07:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-09-16 18:09:46 UTC
As reported on IRC: as the same model is used for the pager as for the task-manager, windows that have the demands attention flag set will be falsely shown on all workspaces.

Reproducible: Always

Steps to Reproduce:
1. Have multiple workspaces and a pager
2. Place a window on one workspace, let's take the great IRC client konversation as an example
3. Have that window trigger demands attention  (e.g. get highlighted in konversation)

Actual Results:  
Window is shown on all workspaces in the pager, as if it was sticky

Expected Results:  
Window is only shown on the correct workspace
Comment 2 Eike Hein 2016-09-19 07:52:12 UTC
Git commit 4185373fc2b8ec7a27f21b4db68ef7799ac34762 by Eike Hein.
Committed on 19/09/2016 at 07:51.
Pushed by hein into branch 'Plasma/5.8'.

Disable filter-bypass by demands-attention windows.

Summary:
Depends on D2802.

Reviewers: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2803

M  +1    -0    applets/pager/plugin/pagermodel.cpp

http://commits.kde.org/plasma-desktop/4185373fc2b8ec7a27f21b4db68ef7799ac34762