Disable filter-bypass by demands-attention windows.

Summary:
Depends on D2802.

BUG:368909

Reviewers: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2803